Fix list bullet collapse, modify home description

--- a/src/components/using.module.scss
+++ b/src/components/using.module.scss
@@ -50,6 +50,7 @@
   li {
     display: flex;
     align-items: center;
+    line-height: 1.3;
     
     &::before {
       counter-increment: section;
@@ -71,6 +72,7 @@
   a {
     color: var(--black-color);
     text-decoration: none;
+    width: calc(100% - 2rem - 0.8rem);
 
     &:hover {
       color: var(--primary-color);
@@ -91,6 +93,7 @@
   li {
     display: flex;
     align-items: center;
+    line-height: 1.3;
     
     &::before {
       counter-increment: section;
@@ -112,6 +115,7 @@
   a {
     color: var(--black-color);
     text-decoration: none;
+    width: calc(100% - 2rem - 0.8rem);
 
     &:hover {
       color: var(--primary-color);
